frontend/tests/cases/negative/exactNat.gr
dub : Int |2 : Nat=| -> Int
dub |x| = x
