frontend/tests/cases/negative/exactNat.gr.output
Type checking failed: 
Grading error: frontend/tests/cases/negative/exactNat.gr:2:1:
1..1 is not approximatable by 2..2 for type Interval Nat